// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbCheckBox check CheckBox with value(=false) 1`] = `
<div>
  <div
    class="form-check"
  >
    <label
      class="form-check-label form-label"
    >
      label
      <input
        class="oi-form-input checkbox form-check-input"
        id="name"
        name="name"
        type="checkbox"
      />
    </label>
  </div>
</div>
`;

exports[`OIbCheckBox check CheckBox with value(=true) 1`] = `
<div>
  <div
    class="form-check"
  >
    <label
      class="form-check-label form-label"
    >
      label
      <input
        checked=""
        class="oi-form-input checkbox form-check-input"
        id="name"
        name="name"
        type="checkbox"
      />
    </label>
  </div>
</div>
`;

exports[`OIbCheckBox check CheckBox with value(=true) and switch mode 1`] = `
<div>
  <div
    class="mb-3"
  >
    <input
      checked=""
      class="form-check-input"
      color="secondary"
      id="name"
      label="label"
      name="name"
      type="checkbox"
    />
  </div>
</div>
`;
